# magister

./: .env.example  .env.maintainer  .gitignore  Cargo.toml  Dockerfile  Dockerfile.magister  Makefile  README.md  magister.example.toml
.github/scripts/: create-release.js  create-rollback-record.js  rollback-registries.sh  sign-release-artifacts.sh
.github/workflows/: release.yml
docs/: WORKFLOW_TESTING.md
src/: config.rs  http_handler.rs  instance_controller.rs  main.rs  types.rs  vast.rs
