[package]
name = "magister"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9" }
anyhow = { version = "1.0.86", default-features = false }
toml = "0.8.20"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
env_logger = "0.11.8"
